[gd_scene load_steps=7 format=3 uid="uid://dadil83w5dmp1"]

[ext_resource type="Script" path="res://hud.gd" id="1_dcv6o"]
[ext_resource type="FontFile" uid="uid://u4gcec00i2ou" path="res://fonts/Xolonium-Regular.ttf" id="1_xay6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dps7i"]
bg_color = Color(0.793889, 0.484838, 0.666999, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74hll"]
bg_color = Color(0.6, 0.196078, 0.6, 1)

[sub_resource type="InputEventAction" id="InputEventAction_70c4p"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_7fp6h"]
events = [SubResource("InputEventAction_70c4p")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dcv6o")

[node name="CountdownLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 8.0
offset_right = -115.0
offset_bottom = 56.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_xay6f")
theme_override_font_sizes/font_size = 36
text = "0"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_xay6f")
theme_override_font_sizes/font_size = 32
text = "Catch the fish! Avoid the crabs and jellyfish!

Use arrow keys to  move
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_xay6f")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_dps7i")
theme_override_styles/normal = SubResource("StyleBoxFlat_74hll")
shortcut = SubResource("Shortcut_7fp6h")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PointsLabel" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 680.0
offset_top = -712.0
offset_right = -192.0
offset_bottom = -663.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_xay6f")
theme_override_font_sizes/font_size = 36
text = "0
"
horizontal_alignment = 1

[node name="LifeLabel" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.981
anchor_right = 0.017
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -698.32
offset_right = 77.84
offset_bottom = -658.0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "* * *"
vertical_alignment = 1

[node name="PLabel" type="Label" parent="."]
offset_left = 536.0
offset_top = 8.0
offset_right = 670.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("1_xay6f")
theme_override_font_sizes/font_size = 36
text = "Score:"

[node name="TLabel" type="Label" parent="."]
offset_left = 192.0
offset_top = 8.0
offset_right = 296.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("1_xay6f")
theme_override_font_sizes/font_size = 36
text = "Time:"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
